[package]
name = "tokenator"
version = "0.1.0"
authors = ["Dania Simmons <dania02525@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
chrono = { version = "0.4.6", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.2", features = ["chrono"] }
ring = "0.13.5"
hex = "0.4.0"
byteorder = "1.3.2"
rand = "0.7.2"
num-traits = "0.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_mysql_pool"]
